@@ -8,17 +8,18 @@
 #include "TGo4DirProxy.h"
 #include "TGo4TreeProxy.h"
 #include "TGo4CanvasProxy.h"
+#include "TGo4HStackProxy.h"
 #include "TGo4Slot.h"
 
 
 class TGo4FolderLevelIter : public TGo4LevelIter {
    public:
       TGo4FolderLevelIter(TFolder* folder) :
-         TGo4LevelIter(), 
-         fIter(0), 
+         TGo4LevelIter(),
+         fIter(0),
          fCurrent(0)
       {
-         fIter = folder->GetListOfFolders()->MakeIterator(); 
+         fIter = folder->GetListOfFolders()->MakeIterator();
       }
 
       virtual ~TGo4FolderLevelIter()
@@ -37,9 +38,10 @@ class TGo4FolderLevelIter : public TGo4LevelIter {
          return (dynamic_cast<TFolder*>(fCurrent)!=0) ||
                 (dynamic_cast<TDirectory*>(fCurrent)!=0) ||
                 (dynamic_cast<TTree*>(fCurrent)!=0) ||
-                (dynamic_cast<TCanvas*>(fCurrent)!=0);
+                (dynamic_cast<TCanvas*>(fCurrent)!=0) ||
+                (dynamic_cast<THStack*>(fCurrent)!=0);
       }
-      
+
       virtual TGo4LevelIter* subiterator()
       {
          TTree* tr = dynamic_cast<TTree*>(fCurrent);
@@ -48,29 +50,31 @@ class TGo4FolderLevelIter : public TGo4LevelIter {
          if (dir!=0) return TGo4DirProxy::ProduceIter(dir, kFALSE);
          TCanvas* canv = dynamic_cast<TCanvas*>(fCurrent);
          if (canv!=0) return TGo4CanvasProxy::ProduceIter(canv);
+         THStack* hs = dynamic_cast<THStack*> (fCurrent);
+         if (hs!=0)  return TGo4HStackProxy::ProduceIter(hs);
          return new TGo4FolderLevelIter((TFolder*)fCurrent);
       }
-      
+
       virtual const char* name()
       {
          return fCurrent->GetName();
       }
- 
+
       virtual const char* info()
       {
          return fCurrent->ClassName();
       }
- 
+
       virtual Int_t GetKind()
       {
          return isfolder() ? TGo4Access::kndFolder : TGo4Access::kndObject;
       }
- 
+
       virtual const char* GetClassName()
       {
          return fCurrent->ClassName();
       }
- 
+
    protected:
       TIterator*     fIter;     //!
       TObject*       fCurrent;  //!
@@ -78,7 +82,7 @@ class TGo4FolderLevelIter : public TGo4LevelIter {
 
 // ****************************************************************
 
-TGo4FolderProxy::TGo4FolderProxy() : 
+TGo4FolderProxy::TGo4FolderProxy() :
    TGo4Proxy(),
    fFolder(0),
    fOwner(kFALSE),
@@ -96,12 +100,12 @@ TGo4FolderProxy::TGo4FolderProxy(TFolder* f, Bool_t owner, const char* rootfolde
 
 TGo4FolderProxy::~TGo4FolderProxy()
 {
-   if (fOwner) delete fFolder;  
+   if (fOwner) delete fFolder;
 }
 
 Int_t TGo4FolderProxy::GetObjectKind()
 {
-   return (fFolder!=0) ? TGo4Access::kndFolder : TGo4Access::kndNone; 
+   return (fFolder!=0) ? TGo4Access::kndFolder : TGo4Access::kndNone;
 }
 
 const char* TGo4FolderProxy::GetContainedClassName()
@@ -111,7 +115,7 @@ const char* TGo4FolderProxy::GetContainedClassName()
 
 void TGo4FolderProxy::WriteData(TGo4Slot* slot, TDirectory* dir, Bool_t onlyobjs)
 {
-   if (!onlyobjs) { 
+   if (!onlyobjs) {
       const char* foldername = fRootFolderName.Length()>0 ? fRootFolderName.Data() : 0;
       slot->SetPar("FolderProxy::RootFolder", foldername);
    }
@@ -120,9 +124,9 @@ void TGo4FolderProxy::WriteData(TGo4Slot* slot, TDirectory* dir, Bool_t onlyobjs
 void TGo4FolderProxy::ReadData(TGo4Slot* slot, TDirectory* dir)
 {
    const char* foldername = slot->GetPar("FolderProxy::RootFolder");
-   
+
    fFolder = LocateROOTFolder(foldername);
-   if (fFolder!=0) 
+   if (fFolder!=0)
       fRootFolderName = foldername;
    fOwner = kFALSE;
 }
@@ -130,57 +134,61 @@ void TGo4FolderProxy::ReadData(TGo4Slot* slot, TDirectory* dir)
 TFolder* TGo4FolderProxy::LocateROOTFolder(const char* rootfolder)
 {
    TFolder* res = 0;
-   if (rootfolder!=0){ 
-     if (strcmp(rootfolder,"//root/")==0) 
+   if (rootfolder!=0){
+     if (strcmp(rootfolder,"//root/")==0)
         res = gROOT->GetRootFolder();
-     else  
+     else
        res = dynamic_cast<TFolder*> (gROOT->GetRootFolder()->FindObject(rootfolder));
    }
-   return res;    
+   return res;
 }
 
 
 TGo4Access* TGo4FolderProxy::ProduceProxy(TFolder* folder, const char* name)
 {
-   if (folder==0) return 0; 
+   if (folder==0) return 0;
    if ((name==0) || (*name==0)) return new TGo4ObjectAccess(folder);
-   
+
    TFolder* curfold = folder;
    const char* curname = name;
-      
-   while (curfold!=0) { 
+
+   while (curfold!=0) {
       const char* slash = strchr(curname,'/');
       UInt_t len = (slash!=0) ? slash - curname : strlen(curname);
       TIter iter(curfold->GetListOfFolders());
       TObject* obj = 0;
-      while ((obj = iter())!=0) 
+      while ((obj = iter())!=0)
          if ((strlen(obj->GetName())==len) &&
              (strncmp(obj->GetName(), curname, len)==0)) break;
       if (obj==0) return 0;
-      
+
       if (slash==0) return new TGo4ObjectAccess(obj);
-      
+
       curname = slash+1;
-            
+
       TTree* tr = dynamic_cast<TTree*> (obj);
       if (tr!=0)
          return TGo4TreeProxy::ProduceProxy(tr, curname);
-         
+
       TDirectory* dir = dynamic_cast<TDirectory*> (obj);
       if (dir!=0)
          return TGo4DirProxy::ProduceProxy(dir, kFALSE, curname);
-            
+
       TCanvas* canv = dynamic_cast<TCanvas*> (obj);
       if (canv!=0)
          return TGo4CanvasProxy::ProduceProxy(canv, curname);
-            
+
+      THStack* hs = dynamic_cast<THStack*> (obj);
+      if (hs!=0)
+         return TGo4HStackProxy::ProduceProxy(hs, curname);
+
       curfold = dynamic_cast<TFolder*>(obj);
    }
-   
+
    return 0;
 }
 
 TGo4LevelIter* TGo4FolderProxy::ProduceIter(TFolder* folder)
 {
-   return new TGo4FolderLevelIter(folder); 
+   return new TGo4FolderLevelIter(folder);
 }
